[gd_scene load_steps=28 format=3 uid="uid://f04xbsvcyxea"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage7/Enemies/mom_7.gd" id="1_1jcnq"]
[ext_resource type="Texture2D" uid="uid://bcequ1l4keex7" path="res://Assets/Stages/07/Enemies/mom7_0001.png" id="1_jw1ss"]
[ext_resource type="PackedScene" uid="uid://c8t86jeql5cgb" path="res://Scenes/Stages/Stage7/bullet_7.tscn" id="2_4udn2"]
[ext_resource type="Texture2D" uid="uid://c4en4y66wx3jq" path="res://Assets/Stages/07/Enemies/mom7_0002.png" id="2_5myc8"]
[ext_resource type="PackedScene" uid="uid://bwgfsx15se7du" path="res://Scenes/Stages/Stage7/egg_7.tscn" id="3_kfuhe"]
[ext_resource type="Texture2D" uid="uid://d2tjgfnqujaso" path="res://Assets/Stages/07/Enemies/mom7_0003.png" id="3_q1p6o"]
[ext_resource type="Texture2D" uid="uid://c861w1ecl8jy1" path="res://Assets/Stages/07/Enemies/mom7_0004.png" id="4_3ebmt"]
[ext_resource type="Texture2D" uid="uid://bsaxyc08i33w6" path="res://Assets/Stages/07/Enemies/mom7_0005.png" id="5_rvjfw"]
[ext_resource type="Texture2D" uid="uid://dmg1yn5m6ivvp" path="res://Assets/Stages/07/Enemies/mom7_0006.png" id="6_bo023"]
[ext_resource type="Texture2D" uid="uid://dshuu6iov5qb4" path="res://Assets/Stages/07/Enemies/mom7_0007.png" id="7_ma0up"]
[ext_resource type="Texture2D" uid="uid://yv1sremjrxst" path="res://Assets/Stages/07/Enemies/mom7_0008.png" id="8_fijlx"]
[ext_resource type="Texture2D" uid="uid://cy0atjbuqac5v" path="res://Assets/Stages/07/Enemies/mom7_0009.png" id="9_ovtjo"]
[ext_resource type="Texture2D" uid="uid://biukqsetclyr8" path="res://Assets/Stages/07/Enemies/mom7_0010.png" id="10_n7qia"]
[ext_resource type="Texture2D" uid="uid://bv0y7kjrw1dew" path="res://Assets/Stages/07/Enemies/mom7_0011.png" id="11_0ejbj"]
[ext_resource type="Texture2D" uid="uid://mcd8f474skhy" path="res://Assets/Stages/07/Enemies/mom7_0012.png" id="12_77giv"]
[ext_resource type="Texture2D" uid="uid://dxt6ei0phhyhr" path="res://Assets/Stages/07/Enemies/mom7_0013.png" id="13_ci5hv"]
[ext_resource type="Texture2D" uid="uid://d2r2ixrponsm7" path="res://Assets/Stages/07/Enemies/mom7_0014.png" id="14_d76j3"]
[ext_resource type="Texture2D" uid="uid://ciyamgwrrwdrg" path="res://Assets/Stages/07/Enemies/mom7_0015.png" id="15_3f4ou"]
[ext_resource type="Texture2D" uid="uid://c42wdmormghvg" path="res://Assets/Stages/07/Enemies/mom7_0016.png" id="16_cyv8n"]
[ext_resource type="Texture2D" uid="uid://bk37ouyt83pm4" path="res://Assets/Stages/07/Enemies/mom7_0017.png" id="17_vqxpt"]
[ext_resource type="Texture2D" uid="uid://dar0ruhve7lau" path="res://Assets/Stages/07/Enemies/mom7_0018.png" id="18_uguyb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1hqne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jw1ss")
}, {
"duration": 1.0,
"texture": ExtResource("2_5myc8")
}, {
"duration": 1.0,
"texture": ExtResource("3_q1p6o")
}, {
"duration": 1.0,
"texture": ExtResource("4_3ebmt")
}, {
"duration": 1.0,
"texture": ExtResource("5_rvjfw")
}, {
"duration": 1.0,
"texture": ExtResource("6_bo023")
}, {
"duration": 1.0,
"texture": ExtResource("7_ma0up")
}, {
"duration": 1.0,
"texture": ExtResource("8_fijlx")
}, {
"duration": 1.0,
"texture": ExtResource("9_ovtjo")
}, {
"duration": 1.0,
"texture": ExtResource("10_n7qia")
}, {
"duration": 1.0,
"texture": ExtResource("11_0ejbj")
}, {
"duration": 1.0,
"texture": ExtResource("12_77giv")
}, {
"duration": 1.0,
"texture": ExtResource("13_ci5hv")
}, {
"duration": 1.0,
"texture": ExtResource("14_d76j3")
}, {
"duration": 1.0,
"texture": ExtResource("15_3f4ou")
}, {
"duration": 1.0,
"texture": ExtResource("16_cyv8n")
}, {
"duration": 1.0,
"texture": ExtResource("17_vqxpt")
}, {
"duration": 1.0,
"texture": ExtResource("18_uguyb")
}],
"loop": true,
"name": &"default",
"speed": 48.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ddcil"]
radius = 28.0179

[sub_resource type="Animation" id="Animation_pmhg6"]
resource_name = "Walking"
length = 1.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(11, -21), Vector2(11, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.175)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(11, -21), Vector2(11, -16)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.175)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n543f"]
_data = {
"Walking": SubResource("Animation_pmhg6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ltwkf"]
radius = 145.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rcckh"]
radius = 152.131
height = 438.382

[node name="Mom7" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 25
collision_mask = 25
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_1jcnq")
bullet = ExtResource("2_4udn2")
egg = ExtResource("3_kfuhe")

[node name="EnemySprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(11, -21)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_jw1ss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(11, -21)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_1hqne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ddcil")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walking"
libraries = {
"": SubResource("AnimationLibrary_n543f")
}

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyHitbox"]]
visible = false
position = Vector2(11, -21)
scale = Vector2(0.2, 0.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-75, 105)
shape = SubResource("CircleShape2D_ltwkf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(15, -65)
rotation = -2.36667
shape = SubResource("CapsuleShape2D_rcckh")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="EggTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="EggTimer" to="." method="_on_egg_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
